postgres.yml
apiVersion: apps/v1 #DRISSI Anasse  RENOUT Quentin
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP # ClusterIP suffit car seul nos microservices doivent y accéder
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
